Adding inital code generation functionality

--- a/nextGenAPI.Tests/nextGenAPI.Tests.csproj
+++ b/nextGenAPI.Tests/nextGenAPI.Tests.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CodeControllerTest.cs" />
+    <Compile Include="Controllers\GenerateCodeControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\ValuesControllerTest.cs" />
