--- a/nextGenAPI/nextGenAPI.csproj
+++ b/nextGenAPI/nextGenAPI.csproj
@@ -186,8 +186,12 @@
     <Compile Include="CodeGeneration\CodeGenerator.cs" />
     <Compile Include="CodeGeneration\Helpers.cs" />
     <Compile Include="Controllers\CodeController.cs" />
+    <Compile Include="DataAccess\Import\DataAccess\ImportCommandFactory.cs" />
+    <Compile Include="DataAccess\Import\ImportRepository.cs" />
+    <Compile Include="DataAccess\Import\ColumnImportDefinition.cs" />
     <Compile Include="Controllers\GenerateCodeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImportController.cs" />
     <Compile Include="Controllers\TableDefinitionController.cs" />
     <Compile Include="Controllers\TemplateController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -199,6 +203,7 @@
     <Compile Include="DataAccess\GenerateCode\DataAccess\GenerateCodeCommandFactory.cs" />
     <Compile Include="DataAccess\GenerateCode\GenerateCodeRepository.cs" />
     <Compile Include="DataAccess\GenerateCode\Scratch.cs" />
+    <Compile Include="DataAccess\Import\ImportTableInfo.cs" />
     <Compile Include="DataAccess\TableDefinition\TableDefinition.cs" />
     <Compile Include="DataAccess\TableDefinition\DataAccess\TableDefinitionCommandFactory.cs" />
     <Compile Include="DataAccess\TableDefinition\TableDefinitionRepository.cs" />
