Returning generated code to client

--- a/nextGenAPI/nextGenAPI.csproj
+++ b/nextGenAPI/nextGenAPI.csproj
@@ -186,6 +186,7 @@
     <Compile Include="CodeGeneration\CodeGenerator.cs" />
     <Compile Include="CodeGeneration\Helpers.cs" />
     <Compile Include="Controllers\CodeController.cs" />
+    <Compile Include="DataAccess\GenerateCode\GeneratedCode.cs" />
     <Compile Include="DataAccess\Import\DataAccess\ImportCommandFactory.cs" />
     <Compile Include="DataAccess\Import\ImportRepository.cs" />
     <Compile Include="DataAccess\Import\ColumnImportDefinition.cs" />
