--- a/nextGenAPI.Tests/nextGenAPI.Tests.csproj
+++ b/nextGenAPI.Tests/nextGenAPI.Tests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Controllers\CodeControllerTest.cs" />
     <Compile Include="Controllers\GenerateCodeControllerTest.cs" />
     <Compile Include="Controllers\ImportControllerTest.cs" />
+    <Compile Include="Controllers\ProjectControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\ValuesControllerTest.cs" />
